<resources>
    <string name="app_name">Plashdom</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="reload_image">Update</string>
    <string name="applied">Applied!</string>
    <string name="about_app">About</string>
    <string name="about_title">About</string>
    <string name="description_app_subtitle">Description</string>
    <string name="description_app_title">A simple app for get Unsplash® random wallpapers</string>
    <string name="information_subtitle">Information</string>
    <string name="information_title">Libraries</string>
    <string name="developer_subtitle">Developer</string>
    <string name="main_developer_description"><![CDATA[Lead designer & developer]]></string>
    <string name="developer_website">Developer website</string>
    <string name="libraries_title">Libraries used</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="size_title">Image size</string>
    <string name="size_summary">The width and height of random picture</string>
    <string name="size_title_dialog">Set image size</string>
    <string name="image_height">Height</string>
    <string name="image_width">Width</string>
    <string name="no_connection_header">No connection</string>
    <string name="no_connection_message">Your network is unavailable. Check your data or wifi connection.</string>
    <string name="no_connection_button">retry</string>
</resources>