<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorElevationBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/colorAccent"
            app:titleTextAppearance="@style/TextAppearance.Plashdom.Toolbar"
            app:title="@string/about_title"
            app:navigationIcon="@drawable/ic_pld_arrow_back_24dp"
            android:elevation="@dimen/card_elevation"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/chart_gradient"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_plashdom_product_24dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/large_margin"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/github_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/small_margin"
                android:padding="@dimen/small_margin"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/rounded_ripple"
                android:textColor="?android:attr/colorAccent"
                android:fontFamily="@font/raleway_medium" />

            <TextView
                android:id="@+id/version_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/small_margin"
                android:textSize="14sp"
                android:textColor="?android:attr/textColorSecondary"
                android:fontFamily="@font/raleway_medium"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                app:cardCornerRadius="@dimen/card_corners"
                app:strokeWidth="@dimen/divider_height"
                app:strokeColor="?colorDivider"
                app:cardBackgroundColor="?android:attr/colorBackground"
                app:cardElevation="@dimen/card_elevation" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Plashdom.Card.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_app_subtitle" />

                    <TextView
                        style="@style/TextAppearance.Plashdom.Card.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/large_margin"
                        android:layout_marginEnd="@dimen/large_margin"
                        android:layout_marginBottom="@dimen/large_margin"
                        android:drawablePadding="@dimen/large_margin"
                        android:text="@string/description_app_title"
                        app:drawableStartCompat="@drawable/ic_pld_info_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                app:cardCornerRadius="@dimen/card_corners"
                app:strokeWidth="@dimen/divider_height"
                app:strokeColor="?colorDivider"
                app:cardBackgroundColor="?android:attr/colorBackground"
                app:cardElevation="@dimen/card_elevation" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Plashdom.Card.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/information_subtitle" />

                    <TextView
                        android:id="@+id/libraries"
                        style="@style/TextAppearance.Plashdom.Card.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/large_margin"
                        android:drawablePadding="@dimen/large_margin"
                        android:background="@drawable/rounded_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/information_title"
                        app:drawableStartCompat="@drawable/ic_pld_library_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                app:cardCornerRadius="@dimen/card_corners"
                app:strokeWidth="@dimen/divider_height"
                app:strokeColor="?colorDivider"
                app:cardBackgroundColor="?android:attr/colorBackground"
                app:cardElevation="@dimen/card_elevation" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Plashdom.Card.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_subtitle" />

                    <LinearLayout
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <TextView
                                android:textColor="?android:attr/textColorPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/large_margin"
                                android:layout_marginEnd="@dimen/large_margin"
                                android:layout_marginBottom="@dimen/medium_margin"
                                android:text="Jeffrey Turns"
                                android:fontFamily="@font/raleway_medium"
                                android:textSize="20sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/large_margin"
                                android:layout_marginEnd="@dimen/large_margin"
                                android:layout_marginBottom="@dimen/large_margin"
                                android:text="@string/main_developer_description"
                                android:fontFamily="@font/raleway_medium"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/main_developer_avatar"
                                android:layout_gravity="end"
                                app:strokeColor="?colorDivider"
                                app:strokeWidth="@dimen/divider_height"
                                app:shapeAppearanceOverlay="@style/Widget.Plashdom.ShapeableImageView"
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_marginEnd="@dimen/large_margin" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:background="?colorDivider"/>

                    <TextView
                        android:id="@+id/developer_website"
                        style="@style/TextAppearance.Plashdom.Card.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/large_margin"
                        android:drawablePadding="@dimen/large_margin"
                        android:background="@drawable/rounded_ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/developer_website"
                        app:drawableStartCompat="@drawable/ic_pld_website_24dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorDivider"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>